--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -67,7 +67,7 @@
     <Compile Include="CustomerPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CustomerPage.Designer.cs">
+    <Compile Include="CustomerPage.designer.cs">
       <DependentUpon>CustomerPage.cs</DependentUpon>
     </Compile>
     <Compile Include="CustomerSignUp.cs">
@@ -82,6 +82,8 @@
     <Compile Include="HomePage.Designer.cs">
       <DependentUpon>HomePage.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBMS.cs" />
+    <Compile Include="Logic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AdminLogin.resx">
